add-xml-to-json/ajax/...

--- a/src/theme.styl
+++ b/src/theme.styl
@@ -1,6 +1,8 @@
 @require "~cube-ui/src/common/stylus/var/color.styl"
 
 
+$color-blue = #444654
+$color-regular-blue = #218BF5
 // action-sheet
 $action-sheet-color := $color-grey
 $action-sheet-active-color := $color-orange
